# rust-genfrom

./: Cargo.toml  README.md
src/: lib.rs
tests/: macro.rs
